--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.3",
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-markdown": "^9.0.1",
     "react-otp-input": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.0",
