akg change dones

--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ MAIL_HOST=smtp.gmail.com
 MAIL_USER=ashish.kr.gupta2907@gmail.com
 MAIL_PASS= gqjsktsxmqffhufq
 JWT_SECRET = 123456789
-MONGODB_URL="mongodb+srv://kavyaDb:ab12qw@tasktrove.4e7ibjz.mongodb.net/TaskTrove"
+MONGODB_URL="mongodb+srv://Ashish000:uK9OIH7ZP8DwzYaw@cluster0.6af8dwv.mongodb.net/TaskTrove"
 
 FOLDER_NAME = "ashishfolder"
 RAZORPAY_KEY = rzp_test_R6WLRVbVVV6rwg
